[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/lobby.gd" type="Script" id=1]

[node name="lobby" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.5
margin_top = -120.0
margin_right = 154.5
margin_bottom = 120.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="c" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -18.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="l2" type="Label" parent="c"]
margin_right = 271.0
margin_bottom = 14.0
text = "Nickname:"

[node name="name" type="LineEdit" parent="c"]
margin_top = 18.0
margin_right = 271.0
margin_bottom = 42.0

[node name="skin_menu" type="OptionButton" parent="c"]
margin_top = 46.0
margin_right = 271.0
margin_bottom = 66.0

[node name="l3" type="Label" parent="c"]
margin_top = 70.0
margin_right = 271.0
margin_bottom = 84.0
text = "Server IP adress:"

[node name="s_adress" type="LineEdit" parent="c"]
margin_top = 88.0
margin_right = 271.0
margin_bottom = 112.0
text = "127.0.0.1"

[node name="error_label" type="Label" parent="c"]
margin_top = 116.0
margin_right = 271.0
margin_bottom = 130.0

[node name="host" type="Button" parent="."]
margin_left = 20.0
margin_top = 200.0
margin_right = 140.0
margin_bottom = 220.0
text = "host"

[node name="join" type="Button" parent="."]
margin_left = 170.0
margin_top = 200.0
margin_right = 290.0
margin_bottom = 220.0
text = "join"
[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
